updated keyboard layouts

--- a/release/fv/fv_sguuxs/source/welcome/welcome.htm
+++ b/release/fv/fv_sguuxs/source/welcome/welcome.htm
@@ -28,7 +28,10 @@
                   <li>All accents are typed after the base character: a̱ is typed a then Hyphen - </li>
                   <li>To type the low line use the Hyphen Key — ḵ is typed k then Hyphen - </li>
                   <li>To type the diaeresis accent use the Left-Bracket Key [ - ü is typed u then Left-Bracket [ </li>
+                    <ul>
                       <li> üü can be typed uu then Left-Bracket [ </li>
+                    </ul>
+                  <li>To type the underdot use the Backquote Key ` - x̣ is typed x then Backquote `</li>
                   <li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. The Left-Bracket [ is typed Right-Alt+Left-Bracket (Windows) Option+Left-Bracket (Mac).</li>
                   
     </tr>
