--- a/experimental/i/ife_mn/source/readme.htm
+++ b/experimental/i/ife_mn/source/readme.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>tbb6u1-ife</title>
+  <title>ife_mn</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,10 +12,10 @@
 </head>
 <body>
 
-<h1>tbb6u1-ife</h1>
+<h1>ife_mn</h1>
 
 <p>
-    tbb6u1-ife 1.0 generated from template.
+    ife_mn 1.0 generated from template.
 </p>
 
 <p>© SIl International</p>
