Updating codepoints on desktop layout for prerelease

--- a/release/fv/fv_hailzaqvla/source/welcome.htm
+++ b/release/fv/fv_hailzaqvla/source/welcome.htm
@@ -10,6 +10,8 @@
 <h1>Start Using the Háiɫzaqvḷa Keyboard</h1>
 
 <p>This keyboard is designed for the Háiɫzaqvḷa language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
+<h2><b>NOTE:</b> This version of the keyboard is designed to work with Kevin King's fonts, and contains unreleased unicode characters.</h2>
+<h2>This keyboard will <b>NOT</b> work as intended on computers that do not have one of Kevin King's fonts installed and is not advised for use outside of Word documents.</h2>
 
 
 <h2>Keyboard Layout (Desktop)</h2>
