--- a/experimental/h/hcesar/source/readme.htm
+++ b/experimental/h/hcesar/source/readme.htm
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h1>Hcesar (portugal)</h1>
+<h1>Hcesar (Portugal)</h1>
 
 <p>
     A disposição do teclado hcesar, também chamado "teclado nacional", foi utilizado por máquinas de escrever vendidas em Portugal desde 1937 até aos anos 80. Foi concebido para colocar o máximo
