--- a/release/fv/fv_haisla/source/welcome.htm
+++ b/release/fv/fv_haisla/source/welcome.htm
@@ -28,7 +28,7 @@
 <p>
 The Haisla keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="file:fv_haisla_keycombos.pdf">this document</a> for all the special key combinations.</p>
 
-<p>© FirstVoices 2020</p>
+<p>© FirstVoices 2020-2024</p>
 
 </body>
 </html>
