--- a/experimental/h/hcesar/source/readme.htm
+++ b/experimental/h/hcesar/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Hcesar (Portugal)</h1>
 
 <p>
-    A disposição do teclado hcesar, também chamado "teclado nacional", foi utilizado por máquinas de escrever vendidas em Portugal desde 1937 até aos anos 80. Foi concebido para colocar o máximo
+    A disposição do teclado hcesar, também chamado "teclado nacional", foi utilizada por máquinas de escrever vendidas em Portugal desde 1937 até aos anos 80. Foi concebida para colocar o máximo
 de teclas normalmente utilizadas no meio do layout.</p>
 <p>The hcesar keyboard layout, also called "teclado nacional," was used by typewriters sold in Portugal from 1937 until the 1980s. It was designed to put the most commonly used keys in the middle of the layout. 
 </p>
