--- a/experimental/h/hcesar/source/welcome/welcome.htm
+++ b/experimental/h/hcesar/source/welcome/welcome.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Start Using Hcesar (portugal)</title>
+  <title>Start Using Hcesar (Portugal)</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,12 +12,12 @@
 </head>
 <body>
 
-<h1>Start Using Hcesar (portugal)</h1>
+<h1>Start Using Hcesar (Portugal)</h1>
 
 <p>
-    A disposição do teclado hcesar, também chamado "teclado nacional", foi utilizado por máquinas de escrever vendidas em Portugal desde 1937 até aos anos 80. Foi concebido para colocar o máximo
-chaves normalmente utilizadas no meio do layout.</p>
-<p>The hcesar keyboard layout, also called "teclado nacional," was used by typewriters sold in Portugal from 1937 until the 1980s. It was designed to put the most
+    A disposição de teclado hcesar, também chamado "teclado nacional", foi utilizada por máquinas de escrever vendidas em Portugal desde 1937 até aos anos 80. Foi concebida para colocar o máximo
+de teclas normalmente utilizadas no meio do layout.</p>
+<p>The hcesar keyboard layout, also called "teclado nacional", was used by typewriters sold in Portugal from 1937 until the 1980s. It was designed to put the most
 commonly used keys in the middle of the layout. 
 </p>
 
