chore: Update welcome files

--- a/release/r/rawang/source/welcome/welcome.htm
+++ b/release/r/rawang/source/welcome/welcome.htm
@@ -64,15 +64,26 @@
 <p style='margin-left:40px'>For <span class='highlightExample'>></span>, type <span class='keys'>[RALT .]</span>.</p>
 
 </div>
+<h2>Desktop Keyboard layout</h2>
+
+<h3>Default (unshifted)</h3>
+<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
+<h3>Shift</h3>
+<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
+<h3>Right ALT (unshifted)</h3>
+<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
+
+<h2>Mobile/Tablet Keyboard Layout</h2>
+<p>High, low, and middle tones are available on long presses for keys: (a, e, i, o, u, v, ø)
+  Press and hold on the key with a little dot on the top right to reveal and use them.</p>
+
+<h3>Default (unshifted)</h3>
+<p><a href="mobileU_.png"><img class="keyboard" src="mobileU_.png" alt="Default (unshifted) layer" /></a></p>
+<h3>Shift</h3>
+<p><a href="mobileU_S.png"><img class="keyboard" src="mobileU_S.png" alt="Shift layer" /></a></p>
+<h3>Right ALT (unshifted)</h3>
+<p><a href="mobileU_Num.png"><img class="keyboard" src="mobileU_Num.png" alt="Numeric layer" /></a></p>
+
 </div>
-  <h2>Desktop Keyboard layout</h2>
-	<h3>Default (unshifted)</h3>
-	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
-	<h3>Shift</h3>
-	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
-	<h3>Right ALT (unshifted)</h3>
-	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
-
-
 </body>
 </html>
