fv_klahoose fixed images

--- a/release/fv/fv_klahoose/source/welcome/welcome.htm
+++ b/release/fv/fv_klahoose/source/welcome/welcome.htm
@@ -29,10 +29,10 @@ This keyboard is designed for the <b>Éy7á7juuthem</b> language of the BC Coast
 <h2>Desktop Keyboard Layout</h2>
 
 <h3>Default</h3>
-<img src="welcome/fv_klahoose_layout_U_.png">
+<img src="fv_klahoose_layout_U_.png">
 
 <h3>Shifted</h3>
-<img src="welcome/fv_klahoose_layout_U_S.png">
+<img src="fv_klahoose_layout_U_S.png">
 
 <ul>
 	<li>To type a combining symbol, first type the base alphabet character (such as <strong>a</strong>), and then type the symbol key (such as <strong>SEMICOLON ;</strong>).</li>
