[starling_sxava_eo] Removed ESL_Gothic_Unicode and some little fixes

--- a/release/s/starling_sxava_eo/source/welcome/options.htm
+++ b/release/s/starling_sxava_eo/source/welcome/options.htm
@@ -125,7 +125,7 @@
 								<p class="respondoj">
 									<input id="dekstra_korno_dk" name="dkorn_fz" type="radio" value="dk" required onclick="montri_dkorn()"><label for="dekstra_korno_dk">Jes, mi povas skribi tiajn literojn per la <abbr title="Senpaŝklavoj estas klavoj, kies premo ne montras specifan skribsignon. Post ilia premo, oni devas tajpi alian klavon por montri certan modifitan skribsignon.">senpaŝklavo<span class="info_icon">i</span></abbr> <span class="klav simbolo">´</span>, kiel: <span class="klav"><span class="simbolo">´</span><span class="plus"> > </span>E</span>, ktp.</label><br>
 									<input id="dekstra_korno_nedk" name="dkorn_fz" type="radio" value="nedk" required onclick="montri_dkorn()"><label for="dekstra_korno_nedk">Mi havas la klavon <span class="klav simbolo">´</span> sed kiam mi tajpas ĝin, ĝi nur montras la skribsignon kaj ne modifas literojn.</label><br>
-									<input id="malsuprenstreko" name="dkorn_fz" type="radio" value="msupren" required onclick="montri_dkorn()"><label for="malsuprenstreko">Ne, mi povas skribi tiajn skribsignojn<span class="defaŭlte">(defaŭlte)</span></label>
+									<input id="malsuprenstreko" name="dkorn_fz" type="radio" value="msupren" required onclick="montri_dkorn()"><label for="malsuprenstreko">Ne, mi ne povas skribi tiajn skribsignojn<span class="defaŭlte">(defaŭlte)</span></label>
 								</p><br>
 								<div class="noto blua" id="dkorn_respondo" style="display:none;">
 									<ul class="horizontala">
@@ -148,7 +148,7 @@
 								<p class="respondoj">
 									<input id="maldekstra_korno_dk" name="mdkorn_fz" type="radio" value="dk" required onclick="montri_mdkorn()"><label for="maldekstra_korno_dk">Jes, mi povas skribi tiajn literojn per la <abbr title="Senpaŝklavoj estas klavoj, kies premo ne montras specifan skribsignon. Post ilia premo, oni devas tajpi alian klavon por montri certan modifitan skribsignon.">senpaŝklavo<span class="info_icon">i</span></abbr> <span class="klav simbolo">`</span>, kiel: <span class="klav"><span class="simbolo">`</span><span class="plus"> > </span>E</span>, ktp.</label><br>
 									<input id="maldekstra_korno_nedk" name="mdkorn_fz" type="radio" value="nedk" required onclick="montri_mdkorn()"><label for="maldekstra_korno_nedk">Mi havas la klavon <span class="klav simbolo">`</span> sed kiam mi tajpas ĝin, ĝi nur montras la skribsignon kaj ne modifas literojn.</label><br>
-									<input id="suprenstreko" name="mdkorn_fz" type="radio" value="supren" required onclick="montri_mdkorn()"><label for="suprenstreko">Ne, mi povas skribi tiajn skribsignojn<span class="defaŭlte">(defaŭlte)</span></label>
+									<input id="suprenstreko" name="mdkorn_fz" type="radio" value="supren" required onclick="montri_mdkorn()"><label for="suprenstreko">Ne, mi ne povas skribi tiajn skribsignojn<span class="defaŭlte">(defaŭlte)</span></label>
 								</p><br>
 								<div class="noto blua" id="mdkorn_respondo" style="display:none;">
 									<ul class="horizontala">
