fix: Name of numeric layer for welcome.htm

--- a/release/r/rawang/source/welcome/welcome.htm
+++ b/release/r/rawang/source/welcome/welcome.htm
@@ -81,7 +81,7 @@
 <p><a href="mobileU_.png"><img class="keyboard" src="mobileU_.png" alt="Default (unshifted) layer" /></a></p>
 <h3>Shift</h3>
 <p><a href="mobileU_S.png"><img class="keyboard" src="mobileU_S.png" alt="Shift layer" /></a></p>
-<h3>Right ALT (unshifted)</h3>
+<h3>Numeric </h3>
 <p><a href="mobileU_Num.png"><img class="keyboard" src="mobileU_Num.png" alt="Numeric layer" /></a></p>
 
 </div>
