--- a/release/fv/fv_klahoose/source/fv_klahoose-help.htm
+++ b/release/fv/fv_klahoose/source/fv_klahoose-help.htm
@@ -31,31 +31,55 @@ This keyboard is designed for the <b>Éy7á7juuthem</b> language of the BC Coast
 <h3>Default</h3>
 <img src="welcome/fv_klahoose_layout_U_.png">
 
+<ul>
+	<li>The "Default" keymap above shows how to type the following characters in Éy7á7juuthem.</li>
+		<ul>
+			<li>ƛ	—	[ <em>left bracket on English layout</em></li>
+			<li>θ	—	] <em>right bracket</em></li>
+			<li>ə	—	; <em>semicolon</em></em></li>
+			<li>ʔ	—	/ <em>slash</em></li>
+		</ul>
+	<li>To type a <strong>combining accent</strong>, first type the base alphabet character (such as <strong>a</strong>), and then type the accent key as listed below.</li>
+	<ul>
+		<li>Acute accent (◌́)	—	Backtick ` (next to 1)</li>
+			<ul><li>Example: e + ` = é </li></ul>
+		<li>Combining glottal apostrophe (◌̓)	—	Apostrophe '</li>
+			<ul><li>Example: m + ' = m̓ </li></ul>
+		<li>Caron (◌̌)	—	Backslash \ </li>
+			<ul><li>Example: c + \ = č</li></ul>
+	</ul>
+	<li>You can type the original English value of the keys by holding down the Right-Alt or Option key.</li>
+		<ul><li>Example: The left bracket [ is typed Right-Alt+[ (Windows) or Option+[ (Mac).</li></ul>
+</ul>
+
 <h3>Shifted</h3>
 <img src="welcome/fv_klahoose_layout_U_S.png">
 
 <ul>
-	<li>To type a combining symbol, first type the base alphabet character (such as <strong>a</strong>), and then type the symbol key (such as <strong>SEMICOLON ;</strong>).</li>
-	<ul>
-		<li>Acute accent (◌́): type <strong>Backtick ` (next to 1)</strong> (Example: e + ` = é)</li>		
-		<li>Combining glottalized apostrophe (◌̓): type <strong>Apostrophe '</strong> (Example: m + ' = m̓)</li>
-		<li>Háček (◌̌): type <strong>Backslash \</strong> (Example: c + \ = č)</li>
-	</ul>
-	
-	<li>To type a raised character, first type the base alphabet character (such as <strong>y</strong>, and then type the Caret ^ (Shift + 6).</li>
+	<li>The "Shifted" keymap above shows characters in Éy7á7juuthem that can be typed with SHIFT key combinations.</li>
+		<ul>
+			<li>ɛ	— SHIFT + e</li>
+			<li>ʊ	—	SHIFT + u</li>
+			<li>I	—	SHIFT + i</li>
+			<li>ɔ	— SHIFT + e</li>
+			<li>æ	—	SHIFT + a</li>
+			<li>ɬ	— SHIFT + l</li>
+			<li>χ	— SHIFT + x</li>
+			<li>w̥	— SHIFT + v</li>
+		</ul>
+	<li>You can type the original English value of the keys by holding down the Right-Alt or Option key.</li>
+		<ul><li>Example: Capital A is typed RightAlt + a (Windows) or Option + a (Mac).</li></ul>
+</ul>
+
+
+<h3>Typing raised characters</h3>
+<ul>
+	<li>To type a <strong>raised character</strong>, first type the base alphabet character (such as <strong>y</strong>, and then type the Caret ^ (Shift + 6).</li>
 		<ul>
 		<li>Raised ᶿ: θ + ^ <em>or</em> t + ^</li> 
 		<li>Raised ʷ: w + ^</li>
 		<li>Raised ʸ: y + ^</li>
-		</ul>
-	
-	<li>You can type the English value of the punctuation keys by holding down the Right-Alt or Option key. The Slash / is typed Right-Alt+Slash (Windows) or Option+Slash (Mac).</li>
-	<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.</li>
-	<ul>
-		<li>quotations: “ Shift+Hyphen — ” Shift+Equals</li>
-		<li>single ‹ Right-Alt+Shift+9 — › Right-Alt+Shift+0</li>
-		<li>double « Right-Alt+9 — » Right-Alt+0</li>
-	</ul>
+		</ul>	
 </ul> 
 
 <p>The following Unicode fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
