Updated disclaimer, added Noto Heiltsuk to package

--- a/release/fv/fv_hailzaqvla/source/welcome.htm
+++ b/release/fv/fv_hailzaqvla/source/welcome.htm
@@ -12,6 +12,7 @@
 <p>This keyboard is designed for the Háiɫzaqvḷa language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
 <h2><b>NOTE:</b> This version of the keyboard is designed to work with Noto Heiltsuk, and contains unreleased unicode characters.</h2>
 <h2>This keyboard will <b>NOT</b> work as intended on computers that do not have Noto Heiltsuk installed and is not advised for use on social media, texting, or emailing.</h2>
+<p>The Noto Heiltsuk font will be installed automatically alongside the keyboard - no further action needs to be taken.</p>
 
 
 <h2>Keyboard Layout (Desktop)</h2>
