--- a/release/fv/fv_henqeminem/source/welcome/welcome.htm
+++ b/release/fv/fv_henqeminem/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-<title>Hən̓q̓əmin̓əm</title>
+<title>hən̓q̓əmin̓əm̓</title>
 
 <style type="text/css"> <!--
 li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
@@ -25,7 +25,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     <h2><img src="Henqeminem.png" alt="" height="198" width="514" border="0" /></h2>
 					 
 							<ul>
-								<li>The special characters of Hən̓q̓əmin̓əm have been assigned to the number keys. To type numerals, hold down the Right-Alt or Option key then press the appropriate number key. The Numeric keypad on the right side of many keyboards keeps its original numbers.</li>
+								<li>The special characters of hən̓q̓əmin̓əm̓ have been assigned to the number keys. To type numerals, hold down the Right-Alt or Option key then press the appropriate number key. The Numeric keypad on the right side of many keyboards keeps its original numbers.</li>
 								<li>All accents are typed after the base character: t̓ is typed t then Apostrophe '</li>
 								<li>To type the glottalized accent use the Apostrophe key ' — k̓ is typed k then Apostrophe '</li>
 								<li>To type the acute accent use the Semicolon key ; — á is typed a then Semicolon ;</li>
@@ -36,7 +36,9 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 								<li>There are several additional characters which can be typed holding down the Right-Alt or Option key.</li>
 								<ul>
 									<li>The chi-χ is typed Right-Alt+x (Windows) Option+x (Mac).</li>
-									<li>The belted-ɬ is typed Right-Alt+l (Windows) Option+l (Mac).</li>
+									<li>The barred-ƚ is typed Right-Alt+l (Windows) Option+l (Mac).</li>
+                                    <li> The middle dot is typed Right-Alt+. (Windows) Option+. (Mac). </li>
+                                    <li> The raised theta is typed Right-Alt+t (Windows) Option+t (Mac). </li>
 								</ul>
 								<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.</li>
 								<ul>
