--- a/release/k/knyaw/source/welcome.htm
+++ b/release/k/knyaw/source/welcome.htm
@@ -15,12 +15,14 @@
 <h1>Start Using knyaw</h1>
 
 <p>
-    knyaw 1.0 generated from template.
+    Keyboard for Karen Language. 
 </p>
 
 <h1>Keyboard Layout</h1>
 
-<!-- Insert Keyboard Layout Images or HTML here -->
+  <p>This keyboard has an on-screen layout which can be used to view which keystrokes to access the characters.</p>
+
+  <!-- Insert Keyboard Layout Images or HTML here -->
 
 </body>
 </html>
