--- a/release/h/hcesar/source/readme.htm
+++ b/release/h/hcesar/source/readme.htm
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>hcesar</title>
+  <title>Start Using Hcesar (Portugal)</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
