--- a/release/b/br_nativo/source/welcome/welcome.htm
+++ b/release/b/br_nativo/source/welcome/welcome.htm
@@ -25,16 +25,15 @@
 
 <h1>Keyboard Layout</h1>
 
-  <h2>Desktop Keyboard layout</h2>
 	<h3>Default (unshifted)</h3>
-	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
+	<p><a href="br_nativoU_.png"><img class="keyboard" src="br_nativoU_.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
-	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
+	<p><a href="br_nativoU_S.png"><img class="keyboard" src="br_nativoU_S.png" alt="Shift state" /></a></p>
 	<h3>Right ALT (unshifted)</h3>
-	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
+	<p><a href="br_nativoU_RA.png"><img class="keyboard" src="br_nativoU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
 
 
-<p>(c) 2009-2024 SIL International</p>
+<p>(c) SIL International</p>
 
 </body>
 </html>
