--- a/release/b/br_nativo/source/readme.htm
+++ b/release/b/br_nativo/source/readme.htm
@@ -17,7 +17,7 @@
     This keyboard layout is based on Dvorak and designed for Brazilian Portuguese.  It includes an on screen keyboard which can be viewed by clicking on the Keyman icon and selecting the On Screen Keyboard menu item.
 </p>
 
-<p>(c) 2009-2024 SIL International</p>
+<p>(c) SIL International</p>
 
 </body>
 </html>
