--- a/release/sil/sil_ipa/source/welcome/welcome.htm
+++ b/release/sil/sil_ipa/source/welcome/welcome.htm
@@ -3427,6 +3427,52 @@ areas denote articulations judged impossible.</span></p>
  </tr>
 </table>
 
+<h3>Subscripts</h3>
+
+<p>In this section the keystrokes are the same whether you turned on <b>Before</b> or not.</p>
+
+<table class=MsoNormalTable border=1 cellspacing=0 cellpadding=0 width=0
+ style='width:334.1pt;margin-left:3.0pt;border-collapse:collapse;border:none'>
+ <tr>
+  <td width=121 style='width:91.1pt;border-top:solid;border-left:solid windowtext 1.5pt;
+  border-bottom:solid windowtext 1.0pt;border-right:none;padding:0in 5.4pt 0in 5.4pt'>
+  <p class=tableipanormal style='margin-top:3.0pt;margin-right:0in;margin-bottom:
+  3.0pt;margin-left:0in;line-height:12.0pt'><span style='font-family:"Charis SIL";
+  color:blue'>₃</span></p>
+  </td>
+  <td width=192 style='width:91.1pt;border-top:solid;border-left:none windowtext 1.5pt;
+  border-bottom:solid windowtext 1.0pt;border-right:none;padding:0in 5.4pt 0in 5.4pt'>
+  <p class=table><span style='font-size:9.0pt;font-family:"Courier New";
+  color:blue'>3_ (0-9)</span></p>
+  </td>
+  <td width=132 style='width:99.0pt;border-top:solid;border-left:none;
+  border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.5pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=table><span style='font-size:9.0pt;font-family:"Arial Narrow",sans-serif;
+  color:blue'>subscript number</span></p>
+  </td>
+ </tr>
+ <tr>
+  <td width=121 style='width:91.1pt;border-top:none;border-left:solid windowtext 1.5pt;
+  border-bottom:solid windowtext 1.5pt;border-right:none;padding:0in 5.4pt 0in 5.4pt'>
+  <p class=tableipanormal style='margin-top:3.0pt;margin-right:0in;margin-bottom:
+  3.0pt;margin-left:0in;line-height:12.0pt'><span style='font-family:"Charis SIL";
+  color:blue'>3̠</span></p>
+  </td>
+  <td width=192 style='width:2.0in;border:none;border-bottom:solid windowtext 1.5pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=table><span style='font-size:9.0pt;font-family:"Courier New";
+  color:blue'>3__ (0-9)</span></p>
+  </td>
+  <td width=132 style='width:99.0pt;border-top:none;border-left:none;
+  border-bottom:solid windowtext 1.5pt;border-right:solid windowtext 1.5pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=table><span style='font-size:9.0pt;font-family:"Arial Narrow",sans-serif;
+  color:blue'>under-bar number</span></p>
+  </td>
+ </tr>
+</table>
+
 <h3>Other (non-IPA) Symbols</h3>
 
 <p>In this section, if you turned on <b>Before</b> in <b>Keyboard options</b>, you will type the opposite sequence to what is in the below table. For example, this sequence "&gt;c" would produce "ƈ".</p>
