--- a/release/k/korean_phonetic/source/welcome/welcome.htm
+++ b/release/k/korean_phonetic/source/welcome/welcome.htm
@@ -144,7 +144,7 @@
 	</div>
 	<div class="key plain" id="K_A">
 	<div class="keycap">a</div>
-	<div class="keytext">ᅩ</div>
+	<div class="keytext">ㅏ</div>
 	</div>
 	<div class="key plain" id="K_S">
 	<div class="keycap">s</div>
