--- a/release/fv/fv_sguuxs/source/readme.htm
+++ b/release/fv/fv_sguuxs/source/readme.htm
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-<h1>SGUUXS Keyboard</h1>
+<h1>Sgüüx̱s Keyboard</h1>
 
 <p>
-    This Keyboard is designed for the SGUUXS language of the BC Coast region of Canada. This is part of a seet of keyboards from FirstVoices.</p>
+    This Keyboard is designed for the Sgüüx̱s language of the BC Coast region of Canada. This is part of a seet of keyboards from FirstVoices.</p>
 
 <p>© 2024 First Peoples' Cultural Council</p>
 
