--- a/release/fv/fv_sguuxs/source/welcome/welcome.htm
+++ b/release/fv/fv_sguuxs/source/welcome/welcome.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SGUUXS Keyboard Layout</title>
+  <title>Sgüüx̱s Keyboard Layout</title>
   <style type="text/css"> <!--
     li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
     p {font-family: "Aboriginal Sans"; }
@@ -24,7 +24,7 @@
       <h2><img src="fv_sguuxsU_.png" alt="Sguuxs" width="514" height="198" /></h2>
              
   <ul>
-                  <li>The special characters of SGUUXS have been assigned to punctuation keys.</li>
+                  <li>The special characters of Sgüüx̱s have been assigned to punctuation keys.</li>
                   <li>All accents are typed after the base character: a̱ is typed a then Hyphen - </li>
                   <li>To type the low line use the Hyphen Key — ḵ is typed k then Hyphen - </li>
                   <li>To type the diaeresis accent use the Left-Bracket Key [ - ü is typed u then Left-Bracket [ </li>
