[anii] typo in help files

--- a/release/a/anii/source/anii-help.htm
+++ b/release/a/anii/source/anii-help.htm
@@ -106,7 +106,7 @@ font-size:10.5pt;
 P&eacute;n&eacute;lan, Saramanga, Yari</span></p>
 <p class="tm6">&#160;</p>
 <p class="Normal">This keyboard works best, when used on a French keyboard (hardware) as its layout follows the French layout for most characters. This keyboard also works great as an on-screen keyboard for clicking (for example
-on websites) and not least as a touch-keyboard on Android and iOS devices (tablets and smartphones, landscape and portraid mode).</p>
+on websites) and not least as a touch-keyboard on Android and iOS devices (tablets and smartphones, landscape and portrait mode).</p>
 <p class="Normal">&#160;</p>
 <p class="Normal">This keyboard is provided free of charge. In return there is no guarantee whatsoever and no support. If you have technical questions - and if those questions are relevant and
 potentially meaningful for other users and if your questions are well written up with enough context provided, then you are welcome to write me at</p>
