--- a/release/sil/sil_tanguat/source/welcome/welcome.htm
+++ b/release/sil/sil_tanguat/source/welcome/welcome.htm
@@ -18,6 +18,24 @@
     This keyboard is designed for the Tanguat language of PNG
   </p>
 
+  <p>To type <b>ñ</b>, use <b>c</b>.</p>
+  <p>To type <b>ə</b>, use <b>f</b>.</p>
+
+  <p>To type <b>Ñ</b>, use <b>C</b>.</p>
+  <p>To type <b>Ə</b>, use <b>F</b>.</p>
+
+  <p>To type <b>c</b>, use <b>]</b>.</p>
+  <p>To type <b>f</b>, use <b>[</b>.</p>
+
+  <p>To type <b>C</b>, use <b>}</b>.</p>
+  <p>To type <b>F</b>, use <b>{</b>.</p>
+
+  <p>To type <b>[</b>, use <b>right-alt</b> <b>[</b>.</p>
+  <p>To type <b>[</b>, use <b>right-alt</b> <b>]</b>.</p>
+  
+  <p>To type <b>{</b>, use <b>shift</b> <b>right-alt</b> <b>{</b> .</p>
+  <p>To type <b>}</b>, use <b>shift</b> <b>right-alt</b> <b>}.</p>
+
   <h1>Keyboard Layout</h1>
 
   <!-- Insert Keyboard Layout Images or HTML here -->
@@ -33,6 +51,15 @@
     
   <h2>Desktop - Shift Right-Alt layer</h2>
   <p><a href="desktop_shift_rightalt.png"><img class="keyboard" src="desktop_shift_rightalt.png" alt="Desktop - Shift Right-Alt layer" /></a></p>
+
+  <h2>Mobile - Default layer</h2>
+  <p><a href="mobile_default.png"><img class="keyboard" src="mobile_default.png" alt="Mobile - Default layer" /></a></p>
+
+  <h2>Mobile - Shift layer</h2>
+  <p><a href="mobile_shifted.png"><img class="keyboard" src="mobile_shifted.png" alt="Mobile - Shift layer" /></a></p>
+
+  <h2>Mobile - Numeric layer</h2>
+  <p><a href="mobile_numeric.png"><img class="keyboard" src="mobile_numeric.png" alt="Mobile - Numeric layer" /></a></p>
 
 </body>
 </html>
