--- a/experimental/p/paleohispanic/source/welcome.htm
+++ b/experimental/p/paleohispanic/source/welcome.htm
@@ -14,11 +14,11 @@
 
 <h1>Start Using Paleohispanic</h1>
 
-<p>This keyboard is designed for typing the Iberian language, using the Northern Palaeohispanic script.</p>
+<p>This keyboard is designed for typing the Iberian language, using the Northern Paleohispanic script.</p>
 
 <h1>Keyboard Layout</h1>
 
-<img class="keyboard" src="layout-paleohispanic.jpg" alt="layout" width="600" >
+<img class="keyboard" src="layout-paleohispanic.png" alt="layout" width="600" >
 
 </body>
 </html>
