--- a/release/s/sudest/source/readme.htm
+++ b/release/s/sudest/source/readme.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>sudest</title>
+  <title>Sudest</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,10 +12,10 @@
 </head>
 <body>
 
-<h1>sudest</h1>
+<h1>Sudest</h1>
 
 <p>
-    sudest 1.0 generated from template.
+    This is a keyboard for typing the Sudest language of Papua New Guinea.
 </p>
 
 <p>©</p>
