--- a/release/s/sudest/source/welcome.htm
+++ b/release/s/sudest/source/welcome.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Start Using sudest</title>
+  <title>Start Using Sudest</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,15 +12,15 @@
 </head>
 <body>
 
-<h1>Start Using sudest</h1>
+<h1>Start Using Sudest</h1>
 
 <p>
-    sudest 1.0 generated from template.
+    This is a keyboard for typing the Sudest language of Papua New Guinea.
 </p>
 
 <h1>Keyboard Layout</h1>
 
-<!-- Insert Keyboard Layout Images or HTML here -->
+<p>To access barred i, type "i=". To access eng, type "n=". </p>
 
 </body>
 </html>
