--- a/release/s/sudest/source/welcome.htm
+++ b/release/s/sudest/source/welcome.htm
@@ -15,12 +15,12 @@
 <h1>Start Using Sudest</h1>
 
 <p>
-    This is a keyboard for typing the Sudest language of Papua New Guinea.
+    This is a keyboard for typing the Sudest language of Papua New Guinea. 
 </p>
 
 <h1>Keyboard Layout</h1>
 
-<p>To access barred i, type "i=". To access eng, type "n=". </p>
+<p>This keyboard follows a standard US QWERTY keyboard layout. However, to access a barred i, type "i=" and to access an eng, type "n=".</p>
 
 </body>
 </html>
