[nguphing] Rename and move folder to release

--- a/release/n/nguphing/source/readme.htm
+++ b/release/n/nguphing/source/readme.htm
@@ -15,12 +15,11 @@
 <h1>nguphing</h1>
 
 <p>
-    nguphing 1.0 generated from template.
+    Nguphing for ngū-ngèi (Goetian) piāu-ciùn-ngū-ngèi.
 </p>
 
-<p>© cathaylab 2024-2024</p>
+<p>© cathaylab</p>
 
-<p>e-mail: goetiansoc@proton.me</p>
 
 </body>
 </html>
