--- a/release/n/nguphing/source/welcome.htm
+++ b/release/n/nguphing/source/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Start Using nguphing</title>
+  <title>Start Using Nguphing</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -11,10 +11,10 @@
 </head>
 <body>
 
-<h1>Start Using nguphing</h1>
+<h1>Start Using Nguphing</h1>
 
 <p>
-    nguphing for ngū-ngèi (Goetian) piāu-ciùn-ngū-ngèi.
+    Nguphing for ngū-ngèi (Goetian) piāu-ciùn-ngū-ngèi.
 </p>
 
 <p>
@@ -27,18 +27,16 @@
     <li> Output "fix", just input "fixx".</li>
 </p>
 
-<!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
-
 <h1>Keyboard Layout</h1>
 
-<p><b>Unshifted</b></p>
+<h2>Unshifted</h2>
 <img src='nguphingU_.png' alt='Keyboard Layout'>
-<p><b>Shifted</b></p>
+<h2>Shifted</h2>
 <img src='nguphingU_S.png' alt='Keyboard Layout'>
 
 
 
-<p>© 2024 cathaylab</p>
+<p>© cathaylab</p>
 
 </body>
 </html>
