--- a/experimental/i/ife_mn/source/readme.htm
+++ b/experimental/i/ife_mn/source/readme.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ife_mn</title>
+  <title>Ifè Mnemonic</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,13 +12,12 @@
 </head>
 <body>
 
-<h1>ife_mn</h1>
+<h1>Ifè Mnemonic</h1>
 
 <p>
-    ife_mn 1.0 generated from template.
+  Keyboard for the Ifè language of Togo.
 </p>
 
-<p>© SIl International</p>
 
 </body>
 </html>
