Updated help and welcome, bumped version number

--- a/release/fv/fv_southern_carrier/source/welcome/welcome.htm
+++ b/release/fv/fv_southern_carrier/source/welcome/welcome.htm
@@ -25,7 +25,7 @@ This keyboard is designed for the <b>ᑐᑊᘁᗕᑋᗸ</b> language of the BC I
 
 <h2> Desktop Layout</h2>
 <ul>
-	<li>The ᑐᑊᘁᗕᑋᗸ (Dakelh / Dulk'wah ke) keyboard is a "build-a-syllable" keyboard. The syllabics are typed by entering their Latin equivalents. The syllabics are typed by entering their Latin equivalents. See <a href="file:fv_SouthernCarrierGuide.pdf">this document</a> for all the special key combinations.</li>
+	<li>The ᑐᑊᘁᗕᑋᗸ (Dakelh / Dulk'wah ke) keyboard is a "build-a-syllable" keyboard. The syllabics are typed by entering their Latin equivalents. The syllabics are typed by entering their Latin equivalents. See the <a href="https://help.keyman.com/keyboard/fv_southern_carrier/10.0/fv_southern_carrier">help page</a> to download the PDF with all the special key combinations.</li>
     <ul>
         <li><b>ᑐᘅᘓᙆ</b> is typed as "duneyaz"</li>
         <li><b>ᗘᑔᒡᘀᐉᑋ</b> is typed as "whudilhk'aih"</li>
