--- a/release/fv/fv_haisla/source/welcome.htm
+++ b/release/fv/fv_haisla/source/welcome.htm
@@ -26,7 +26,7 @@
 </p>
 <!-- Insert Keyboard Layout Images or HTML here -->
 <p>
-The Haisla keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="file:fv_haisla_keycombos.pdf">this document</a> for all the special key combinations.</p>
+The Haisla keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See the <a href="https://help.keyman.com/keyboard/fv_haisla/1.0/fv_haisla">help page</a> to download the PDF with all of the special key combinations.</p>
 
 <p>© FirstVoices 2020-2024</p>
 
