[lycian] Update files to use shared fonts and improve metadata

--- a/release/l/lycian/source/welcome/welcome.htm
+++ b/release/l/lycian/source/welcome/welcome.htm
@@ -14,18 +14,13 @@
 <h1>Start Using Lycian</h1>
 
 <p>
-    Lycian 1.0
+  Keyboard for typing the Lycian and Milyan languages using the Lycian script.
 </p>
 
 <h1>Keyboard Layout</h1>
 
 <h2>Desktop Layout</h2>
 <img src="desktop_layout.png" alt="Desktop Layout">
-<h2>Touch Layout</h2>
-<p>Default Layer</p>
-<img src="touch_layout_default.png" alt="Touch Layout, Default">
-<p>Shift Layer</p>
-<img src="touch_layout_shift.png" alt="Touch Layout, Shift">
 
 <p>© SIL International</p>
 
