--- a/release/l/lycian/source/readme.htm
+++ b/release/l/lycian/source/readme.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Lycian</title>
+  <title>Start Using Lycian Keyboard</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -11,10 +11,10 @@
 </head>
 <body>
 
-<h1>Lycian</h1>
+<h1>Lycian Keyboard</h1>
 
 <p>
-    Lycian 1.0 generated from template.
+  Keyboard for typing the Lycian and Milyan languages using the Lycian script.
 </p>
 
 <p>© SIL International</p>
