[lydian] Update keyboard to use shared fonts and so it will build

--- a/release/l/lydian/source/readme.htm
+++ b/release/l/lydian/source/readme.htm
@@ -14,7 +14,7 @@
 <h1>Lydian</h1>
 
 <p>
-    Lydian 1.0 generated from template.
+  Keyboard for the Lydian language using the Lydian script.
 </p>
 
 <p>© SIL International</p>
