--- a/release/l/lydian/source/welcome/welcome.htm
+++ b/release/l/lydian/source/welcome/welcome.htm
@@ -14,18 +14,14 @@
 <h1>Start Using Lydian</h1>
 
 <p>
-    Lydian 1.0
+  Keyboard for the Lydian language using the Lydian script.
 </p>
 
 <h1>Keyboard Layout</h1>
 
 <h2>Desktop Layout</h2>
 <img src="desktop_layout.png" alt="Desktop Layout">
-<h2>Touch Layout</h2>
-<p>Default Layer</p>
-<img src="touch_layout_default.png" alt="Touch Layout, Default">
-<p>Shift Layer</p>
-<img src="touch_layout_shift.png" alt="Touch Layout, Shift">
+
 
 <p>© SIL International</p>
 
