[elbasan] Update to use shared fonts and improve metadata

--- a/release/e/elbasan/source/welcome/welcome.htm
+++ b/release/e/elbasan/source/welcome/welcome.htm
@@ -14,7 +14,7 @@
 <h1>Start Using Elbasan</h1>
 
 <p>
-    Elbasan 1.0 generated from template.
+  This keyboard layout is designed for Albanian using the Elbasan script.
 </p>
 
 <h1>Keyboard Layout</h1>
