[taigi_telex] Rename/update keyboard on behalf of author

--- a/release/t/taigi_telex/source/welcome.htm
+++ b/release/t/taigi_telex/source/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Start Using nguphing</title>
+  <title>Start Using Taigi Telex</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<h1>Start Using nguphing</h1>
+<h1>Start Using Taigi Telex</h1>
 
 <p>
     Taigi Telex for Tâi-gí (Taiwanese) pe̍h-ōe-jī.
@@ -29,19 +29,19 @@
 
 </p>
 
-<!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
+<h2>Desktop Keyboard Layout</h2>
 
-<h1>Keyboard Layout</h1>
-
-<p><b>Unshifted</b></p>
+<h3>Unshifted</h3>
 <img src='taigitelexU_.png' alt='Keyboard Layout'>
-<p><b>Shifted</b></p>
+<h3>Shifted</h3>
 <img src='taigitelexU_S.png' alt='Keyboard Layout'>
-<p><b>Phone Default</b></p>
+<h2>Phone Layout</h2>
+
+<h3>Phone Default</h3>
 <img src='taigitelex_.png' alt='Keyboard Layout'>
-<p><b>Phone Shifted</b></p>
+<h3>Phone Shifted</h3>
 <img src='taigitelex_S.png' alt='Keyboard Layout'>
-<p><b>Phone Numeric</b></p>
+<h3>Phone Numeric</h3>
 <img src='taigitelex_N.png' alt='Keyboard Layout'>
 
 
