[phaistos_disc] Update keyboard to be releaseable

--- a/release/p/phaistos_disc/source/readme.htm
+++ b/release/p/phaistos_disc/source/readme.htm
@@ -14,7 +14,7 @@
 <h1>Phaistos Disc</h1>
 
 <p>
-This keyboard is designed for the Phaistos Disc script.
+This keyboard is designed for the Phaistos Disc symbols.
 </p>
 
 <p>© SIL International</p>
