--- a/release/p/phaistos_disc/source/welcome/welcome.htm
+++ b/release/p/phaistos_disc/source/welcome/welcome.htm
@@ -14,7 +14,7 @@
 <h1>Start Using Phaistos Disc</h1>
 
 <p>
-This keyboard is designed for the Phaistos Disc script.
+This keyboard is designed for the Phaistos Disc symbols.
 </p>
 
   <h2>Keyboard layout</h2>
