--- a/experimental/p/paleohispanic/source/readme.htm
+++ b/experimental/p/paleohispanic/source/readme.htm
@@ -14,7 +14,7 @@
 
 <h1>Paleohispanic</h1>
 
-<p></p>
+<p style="background-color:Pink;"><b>Note:</b> Please note that this keyboard (and associated font) is using codepoints that are not officially accepted into The Unicode Standard. The Northern Paleohispanic script has not yet been accepted for encoding into the standard. It is currently on the Unicode roadmap, but these codepoints can, and probably will, change. Once the script is accepted into Unicode the encoding assignments may change. Because this script is not encoded in Unicode, mobile devices will not include fonts supporting this keyboard. Additionally, on mobile devices the keyboard will only display the correct characters within the Keyman application.</p>
 
 <p>For help or to report bugs, please visit the Keyman community forums <a href=https://community.software.sil.org/>here</a>.
 
