--- a/experimental/p/paleohispanic/source/welcome.htm
+++ b/experimental/p/paleohispanic/source/welcome.htm
@@ -14,7 +14,7 @@
 
 <h1>Start Using Paleohispanic</h1>
 
-<p style="background-color:Pink;"><b>Note:</b> Please note that this keyboard (and associated font) is using codepoints that are not officially accepted into The Unicode Standard. The Northern Paleohispanic script has not yet been accepted for encoding into the standard. It is currently on the Unicode roadmap, but these codepoints can, and probably will, change. Once the script is accepted into Unicode the encoding assignments may change. Because this script is not encoded in Unicode, mobile devices will not include fonts supporting this keyboard. Additionally, on mobile devices the keyboard will only display the correct characters within the Keyman application.<p>
+<p style="background-color:Pink;"><b>Note:</b> Please note that this keyboard (and associated font) is using codepoints that are not officially accepted into The Unicode Standard. The Northern Paleohispanic script has not yet been accepted for encoding into the standard. It is currently on the Unicode roadmap, but these codepoints can, and probably will, change. Once the script is accepted into Unicode the encoding assignments may change. Because this script is not encoded in Unicode, mobile devices will not include fonts supporting this keyboard. Additionally, on mobile devices the keyboard will only display the correct characters within the Keyman application.</p>
 
 <p>This keyboard is distributed with the <b>PHN-Basiarebe</b> font which is based on the codepoints in the Unicode roadmap for Northern Paleohispanic. Unless the font is used, the user will see square boxes. This will especially be true on mobile devices. </p>
   
