--- a/release/fv/fv_sguuxs/source/welcome/welcome.htm
+++ b/release/fv/fv_sguuxs/source/welcome/welcome.htm
@@ -33,8 +33,14 @@
                     </ul>
                   <li>To type the underdot use the Backquote Key ` - x̣ is typed x then Backquote `</li>
                   <li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. The Left-Bracket [ is typed Right-Alt+Left-Bracket (Windows) Option+Left-Bracket (Mac).</li>
-                  
+        <ul></ul>      
+      <p>The following Unicode fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+
+      <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>             
     </tr>
+
+   
+
     <tr>
       <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
     </tr>
