--- a/release/fv/fv_lekwungen/source/welcome/welcome.htm
+++ b/release/fv/fv_lekwungen/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Lekwungen Keyman Web Help</title>
+  <title>Lekwungen (lək̓ʷəŋən) Keyman Web Help</title>
 
 <style type="text/css"> <!--
 li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
@@ -19,7 +19,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 
 <body>
 <p style='margin: 16px 0 0 0'>
-This keyboard is designed for the <b>Lekwungen</b> language of the BC Coast region of Canada.
+This keyboard is designed for the <b>Lekwungen (lək̓ʷəŋən)</b> language of the BC Coast region of Canada.
 </p>
 
 <p>If square boxes are displayed instead of characters when using this keyboard (and in the keyboard layouts below), please read our <a href="/troubleshooting/#boxes">troubleshooting guide</a>.
