--- a/release/v/vithkuqi/source/readme.htm
+++ b/release/v/vithkuqi/source/readme.htm
@@ -14,7 +14,7 @@
 <h1>Vithkuqi</h1>
 
 <p>
-    Vithkuqi 1.0 generated from template.
+    This keyboard layout is designed for Albanian using the Vithkuqi script.
 </p>
 
 <p>© SIL International</p>
