--- a/release/v/vithkuqi/source/welcome/welcome.htm
+++ b/release/v/vithkuqi/source/welcome/welcome.htm
@@ -14,7 +14,7 @@
 <h1>Start Using Vithkuqi</h1>
 
 <p>
-    Vithkuqi 1.0 generated from template.
+    This keyboard layout is designed for Albanian using the Vithkuqi script.
 </p>
 
   <h1>Desktop Keyboard layout</h1>
