--- a/release/c/caucasian_albanian/source/readme.htm
+++ b/release/c/caucasian_albanian/source/readme.htm
@@ -14,7 +14,7 @@
 <h1>Caucasian Albanian</h1>
 
 <p>
-   Caucasian Albanian 1.0 generated from template.
+   This keyboard layout is designed for Albanian using the Caucasian Albanian script.
 </p>
 
 <p>© SIL International</p>
