--- a/release/c/caucasian_albanian/source/welcome/welcome.htm
+++ b/release/c/caucasian_albanian/source/welcome/welcome.htm
@@ -14,7 +14,7 @@
 <h1>Start Using Caucasian Albanian</h1>
 
 <p>
-    Caucasian Albanian 1.0 generated from template.
+    This keyboard layout is designed for Albanian using the Caucasian Albanian script.
 </p>
 
   <h1>Desktop Keyboard layout</h1>
