--- a/release/fv/fv_lekwungen/source/readme.htm
+++ b/release/fv/fv_lekwungen/source/readme.htm
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="utf-8">
-  <title>Lekwungen (lək̓ʷəŋən) Keyboard</title>
+  <title>Lekwungen (Lək̓ʷəŋən) Keyboard</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
 
-<h1> Lekwungen (lək̓ʷəŋən) Keyboard</h1>
+<h1> Lekwungen (Lək̓ʷəŋən) Keyboard</h1>
 
-<p>This keyboard is designed for the Lekwungen (lək̓ʷəŋən) language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
+<p>This keyboard is designed for the Lekwungen (Lək̓ʷəŋən) language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
 
 </body>
 </html>
