--- a/release/i/inddv/source/readme.htm
+++ b/release/i/inddv/source/readme.htm
@@ -14,7 +14,7 @@
 <h1>Indonesia Dvorak</h1>
 
 <p>
-    Indonesia Dvorak 1.0 generated from template.
+    Indonesia Dvorak layout.
 </p>
 
 <p>(c) 2024 SIL International</p>
