--- a/release/i/inddv/source/welcome/welcome.htm
+++ b/release/i/inddv/source/welcome/welcome.htm
@@ -14,7 +14,7 @@
 <h1>Start Using Indonesia Dvorak</h1>
 
 <p>
-    Indonesia Dvorak 1.0 generated from template.
+    Indonesia Dvorak layout.
 </p>
 
 <h1>Keyboard Layout</h1>
