added fonts, added keyboard layout image, updated readme.htm

--- a/release/fv/fv_nlakapamuxcheen/source/readme.htm
+++ b/release/fv/fv_nlakapamuxcheen/source/readme.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>fv_nlakapamuxcheen</title>
+  <title>nlakapamuxcheen keyboard</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,10 +12,10 @@
 </head>
 <body>
 
-<h1>fv_nlakapamuxcheen</h1>
+<h1>nlakapamuxcheen keyboard</h1>
 
 <p>
-    fv_nlakapamuxcheen 1.0 generated from template.
+  This keyboard is designed for the nlakapamuxcheen language of the BC Interior region of Canada. This is part of a set of keyboards from FirstVoices.
 </p>
 
 <p>© 2024 First Peoples' Cultural Foundation, FirstVoices</p>
