--- a/release/fv/fv_nlha7kapmxtsin/source/welcome/welcome.htm
+++ b/release/fv/fv_nlha7kapmxtsin/source/welcome/welcome.htm
@@ -32,9 +32,14 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 							</ul>
 						<li>The original values of the punctuation keys can be typed by holding down the Right-Alt or Option key. The Slash / is typed Right-Alt+Slash (Windows) Option+Slash (Mac).</li>
 					</ul>
+          <h2>Unicode Fonts</h2>
+						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+    <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
+    <hr></td>
   </tr>
   <tr>
     <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
+    <td valign="middle"><a href="http://www.languagegeek.com"><img src="lgBlue162x31.png" width="162" height="31" border="0"/></a></td>
   </tr>
   <tr>
     <td colspan="2"><p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’ Heritage Language and Culture Council. This keyboard is provided free of charge. </p></td>
@@ -43,4 +48,3 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 
 </body>
 </html>
-
