--- a/release/fv/fv_dene_dzage/source/fv_dene_dzage-help.htm
+++ b/release/fv/fv_dene_dzage/source/fv_dene_dzage-help.htm
@@ -14,19 +14,18 @@ a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
  --> </style>
+
+
 </head>
 <body>
     <table width="100%" border="0" cellpadding="0">
       <tr>
         <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
-
 </p>
-<h1>Keyboard combinations</h1>
+<h1>Keyboard Layout</h1>
 <p>
 </p>
-<!-- Insert Keyboard Layout Images or HTML here -->
-<p>
-The Dene Dzage keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="file:fv_dene_dzage_combinations.pdf">this document</a> for all the special key combinations.</p>
+<p>The Dene Dzage keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="file:fv_dene_dzage_combinations.pdf">this document</a> for all the special key combinations.</p>
 
 <tr>
   <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
