--- a/release/fv/fv_dene_dzage/source/welcome/welcome.htm
+++ b/release/fv/fv_dene_dzage/source/welcome/welcome.htm
@@ -21,12 +21,16 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
         <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
 
 </p>
-<h1>Keyboard combinations</h1>
+<h2>Desktop Layout</h2>
 <p>
 </p>
-<!-- Insert Keyboard Layout Images or HTML here -->
-<p>
-The Dene Dzage keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="file:fv_dene_dzage_combinations.pdf">this document</a> for all the special key combinations.</p>
+<p> The Dene Dzage keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="file:fv_dene_dzage_combinations.pdf">this document</a> for all the special key combinations.</p>
+<p></p>
+<h2>Unicode Fonts</h2>
+						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+    <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
+    <hr></td>
+  </tr>
 
 <tr>
   <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
