--- a/release/fv/fv_nlakapamuxcheen/source/welcome/welcome.htm
+++ b/release/fv/fv_nlakapamuxcheen/source/welcome/welcome.htm
@@ -24,7 +24,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
      
     <h2><img src="fv_nlakapamuxcheenU_.png" alt="" height="198" width="514" border="0" /></h2>
 					<ul>
-						<li>The lowline has been assigned to the <b>colon key ;</b>. To type the regular colon, hold down the Right-Alt or Option key then press the colon key.</li>
+						<li>The lowline has been assigned to the <b>semicolon key ;</b>. To type the regular semicolon, hold down the Right-Alt or Option key then press the colon key.</li>
 						<li>To type <b>g̲</b>, type <b>g + ; </b></li>
 						<li>For any double or triple letters that have the lowline, type all the letters followed by the colon key.</li>
               <ul>
