[sil_euro_latin] -  Convert blank keys on currency layer to spacers

--- a/release/sil/sil_euro_latin/source/welcome/welcome.htm
+++ b/release/sil/sil_euro_latin/source/welcome/welcome.htm
@@ -113,8 +113,10 @@
             <h3>Default</h3>
             <img src="touch-default.png">
 
+            <p>
             Variants of each letter may be found via longpress, while the letter in the top-right may be
             typed by touching the key and then dragging down.
+            </p>
 
             <h3>Shift</h3>
             <img src="touch-shift.png">
@@ -122,12 +124,14 @@
             <h3>Numeric</h3>
             <img src="touch-numeric.png">
 
+            <p>
             Each key matches its position on the default layer.  The second and third row's keys each
             offer a different key that may be typed using the same touch-and-drag technique as
             described for the default layer.  Curly brackets are available via longpress on the
-            ( and ) keys.
-
+            "(" and ")" keys.
+            <br/>
             Note that the keys have changed position compared to 2.x versions of the keyboard.
+            </p>
 
             <h3>Symbol</h3>
             <img src="touch-symbol.png">
