--- a/wenchow/source/welcome.htm
+++ b/wenchow/source/welcome.htm
@@ -16,7 +16,7 @@
 <p>
     wenchow for üe-tsiu-ó.
 </p>
-oo = ö, uu = û, ii = ï, ae= æ, uw= ü, mm = m̌, nn = ň, ll = l̆, ňg = ngg, as = á, af = à. 
+oo = ö, uu = û, ii = ï, ae= æ, uw= ü, mm = m̌, nn = ň, ll = l̆, ňg = ngg, aq = á, ax = à. 
 
 <!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
 
