--- a/release/b/belgian_typewriter/source/welcome/welcome.htm
+++ b/release/b/belgian_typewriter/source/welcome/welcome.htm
@@ -14,7 +14,7 @@
 <h1>Start Using Belgian (Typewriter)</h1>
 
 <p>
-    Belgian (Typewriter) 1.0 generated from template.
+    Belgian (Typewriter) keyboard layout.
 </p>
 <p>This keyboard makes use of deadkeys. Typing the deadkey before the base character will output the combined character. For example:</p>
 <p>~a will produce ã (available on aAnNoO).</p>
