--- a/experimental/w/wenchow/source/readme.htm
+++ b/experimental/w/wenchow/source/readme.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>wenchow</title>
+  <title>Wenchow</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,10 +12,10 @@
 </head>
 <body>
 
-<h1>wenchow</h1>
+<h1>Wenchow</h1>
 
 <p>
-    wenchow 1.0 generated from template.
+  Wenchow for üe-tsiu-ó.
 </p>
 
 <p>© cathaylab</p>
