--- a/experimental/w/wenchow/source/welcome.htm
+++ b/experimental/w/wenchow/source/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Start Using wenchow</title>
+  <title>Start Using Wenchow</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -11,14 +11,12 @@
 </head>
 <body>
 
-<h1>Start Using wenchow</h1>
+<h1>Start Using Wenchow</h1>
 
 <p>
-    wenchow for üe-tsiu-ó.
+    Wenchow for üe-tsiu-ó.
 </p>
 oo = ö, uu = û, ii = ï, ae= æ, uw= ü, mm = m̌, nn = ň, ll = l̆, ňg = ngg, aq = á, ax = à. 
-
-<!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
 
 <h1>Keyboard Layout</h1>
 
@@ -26,12 +24,12 @@ oo = ö, uu = û, ii = ï, ae= æ, uw= ü, mm = m̌, nn = ň, ll = l̆, ňg =
 <img src='uchauU_.png' alt='Keyboard Layout'>
 <p><b>Shifted</b></p>
 <img src='uchauU_S.png' alt='Keyboard Layout'>
-<p><b>Phone Default</b></p>
 
 
 
 
-<p>© 2024 cathaylab</p>
+
+<p>© cathaylab</p>
 
 </body>
 </html>
