--- a/experimental/u/unifon/source/readme.htm
+++ b/experimental/u/unifon/source/readme.htm
@@ -14,7 +14,7 @@
 <h1>Unifon</h1>
 
 <p>
-This keyboard is designed for the Unifon alphabet.
+This keyboard is designed for the Unifon alphabet. It is using a custom encoding.
 </p>
 
 <p>© SIL International</p>
