--- a/experimental/u/unifon/source/welcome/welcome.htm
+++ b/experimental/u/unifon/source/welcome/welcome.htm
@@ -14,7 +14,7 @@
 <h1>Start Using Unifon</h1>
 
 <p>
-This keyboard is designed for the Unifon alphabet.
+This keyboard is designed for the Unifon alphabet. It is using a custom encoding.
 </p>
 
   <h2>Keyboard layout</h2>
