--- a/release/fv/fv_nlekepmxcin/source/welcome/welcome.htm
+++ b/release/fv/fv_nlekepmxcin/source/welcome/welcome.htm
@@ -22,7 +22,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
   <tr>
     <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
      
-    <h2><img src="Nlekepmxcin.png" alt="" height="198" width="514" border="0" /></h2>
+    <h2><img src="fv_nlekepmxcin_U_.png" alt="" height="198" width="514" border="0" /></h2>
 					<ul>
 						<li>The special characters of Nɬeʔkepmxcín have been assigned to the number keys. To type the numerals, hold down the Right-Alt or Option key then press the appropriate number key. The Numeric keypad on the right side of many keyoards keep its original numbers</li>
 						<li>All accents are typed after the base character: á is typed a then Semicolon ;</li>
